--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-motion-ui-pack": "^0.10.3",
     "react-redux": "*",
     "react-scripts": "1.1.4",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "styled-components": "^3.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
