--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-motion-ui-pack": "^0.10.3",
