--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^5.2.3",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "react": "15.0.0",
+    "react-dom": "^15.0.0",
     "react-motion-ui-pack": "^0.10.3",
     "react-redux": "*",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^5.0.1",
     "redux": "^4.0.0",
-    "styled-components": "^3.2.6"
+    "styled-components": "^6.0.0-rc.2"
   },
   "scripts": {
     "start": "react-scripts start",
