--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "react": "15.0.0",
-    "react-dom": "^15.0.0",
+    "react-dom": "15.0.0",
     "react-motion-ui-pack": "^0.10.3",
     "react-redux": "*",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^5.0.0",
     "redux": "^4.0.0",
     "styled-components": "^6.0.0-rc.2"
   },
