--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "bootstrap": "5.2.3",
     "react": "16.8.0",
     "react-dom": "16.3.2",
-    "react-motion-ui-pack": "0.10.3",
+    "react-motion-ui-pack": "^0.10.3",
     "react-redux": "5.0.7",
     "react-scripts": "5.0.0",
     "redux": "4.0.0",
-    "styled-components": "6.0.0-rc.2"
+    "styled-components": "^6.0.0-rc.2"
   },
   "scripts": {
     "start": "react-scripts start",
