--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "bootstrap": "5.2.3",
     "react": "16.3.2",
     "react-dom": "16.3.2",
-    "react-motion-ui-pack": "0.10.0",
+    "react-motion-ui-pack": "^0.10.1",
     "react-redux": "5.0.7",
     "react-scripts": "5.0.0",
     "redux": "4.0.0",
