--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "dependencies": {
     "bootstrap": "5.2.3",
-    "react": "16.3.2",
+    "react": "15.7.0",
     "react-dom": "16.3.2",
-    "react-motion-ui-pack": "^0.10.3",
+    "react-motion-ui-pack": "0.10.3",
     "react-redux": "5.0.7",
     "react-scripts": "5.0.0",
     "redux": "4.0.0",
