--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "bootstrap": "5.2.3",
     "react": "15.7.0",
-    "react-dom": "^15.7.0",
-    "react-motion-ui-pack": "0.10.3",
+    "react-dom": "15.7.0",
+    "react-motion-ui-pack": "0.10.0",
     "react-redux": "5.0.7",
     "react-scripts": "5.0.0",
     "redux": "4.0.0",
