--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-dom": "15.7.0",
     "react-motion-ui-pack": "0.10.0",
     "react-redux": "5.0.7",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^4.0.0",
     "redux": "4.0.0",
     "styled-components": "5.0.0"
   },
