--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "Casper's Resume",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./public",
   "dependencies": {
     "bootstrap": "4.6.2",
+    "jquery": "^3.7.0",
+    "popper.js": "^1.16.1",
     "react": "15.7.0",
     "react-dom": "15.7.0",
     "react-motion-ui-pack": "^0.10.1",
     "react-redux": "5.0.7",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^4.0.2",
     "redux": "4.0.0",
     "styled-components": "3.1.0"
   },
@@ -29,5 +32,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.3"
   }
 }
