--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "homepage": "./public",
   "dependencies": {
     "bootstrap": "4.6.2",
-    "jquery": "^3.7.0",
+    "jquery": "3.7.0",
     "popper.js": "^1.16.1",
     "react": "15.7.0",
     "react-dom": "15.7.0",
-    "react-motion-ui-pack": "^0.10.1",
+    "react-motion-ui-pack": "0.10.1",
     "react-redux": "5.0.7",
-    "react-scripts": "^4.0.2",
+    "react-scripts": "4.0.0",
     "redux": "4.0.0",
     "styled-components": "3.1.0"
   },
